# Arc-Agi3

./: .dockerignore  .gitignore  Dockerfile  FIXES_SUMMARY.md  GRID_DEBUG.md  README.md  RULES.md  UPLOAD_FIX.md  main.py  play.py  play_gui.py  pyproject.toml  railway.json  railway.toml  requirements.txt  run.py  run_game.command  start.sh
ARC-AGI copy/apps/: index.html  task_index.json
ARC-AGI copy/apps/css/: responsive.css
ARC-AGI copy/apps/js/: task_index_data.js  testing_interface.js
ARC-AGI copy/data/my_tasks/: task_001.json  task_006.json  task_008.json
ARC-AGI-main/apps/: index.html
ARC-AGI-main/apps/css/: responsive.css  testing_interface.css
ARC-AGI-main/apps/js/: testing_interface.js
environment_files/bx02/v1/: bx02.py  metadata.json
environment_files/cd01/v1/: cd01.py  metadata.json
environment_files/ga85/v1/: ga85.py  metadata.json
environment_files/pm07/v1/: metadata.json  pm07.py
environment_files/test/v1/: metadata.json
web/: server.py
web/templates/: grid-test.html  index.html  landing.html  upload-test.html
