[project]
name = "arc-3-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.1",
    "pygame>=2.6.1",
    "flask>=3.1.0",
    "flask-socketio>=5.4.1",
    "eventlet>=0.37.0",
    "pillow>=11.0.0",
    "gunicorn>=22.0.0",
]
